# Frog-Archiver

./: .gitignore  .travis.yml  404.html  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  about_8h_source.html  annotated.html  classAbout-members.html  classAbout.html  classAbout__coll__graph.map  classAbout__inherit__graph.map  classAbout__inherit__graph.md5  classCompressWindow-members.html  classCompressWindow.html  classCompressWindow__coll__graph.map  classCompressWindow__coll__graph.md5  classCompressWindow__inherit__graph.map  classCompressWindow__inherit__graph.md5  classExtractWindow-members.html  classExtractWindow.html  classExtractWindow__coll__graph.map  classExtractWindow__coll__graph.md5  classExtractWindow__inherit__graph.map  classExtractWindow__inherit__graph.md5  classHuffmanDecoding-members.html  classHuffmanDecoding.html  classHuffmanDecoding__coll__graph.map  classHuffmanDecoding__coll__graph.md5  classHuffmanDecoding__inherit__graph.map  classHuffmanEncoding-members.html  classHuffmanEncoding.html  classHuffmanEncoding__coll__graph.map  classHuffmanEncoding__coll__graph.md5  classHuffmanEncoding__inherit__graph.map  classHuffmanEncoding__inherit__graph.md5  classLicense-members.html  classLicense.html  classLicense__coll__graph.map  (+40 more)
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml  release.yml
.vuepress/: config.js
assets/js/: 2.72abb4a9.js  2.7c2c2bef.js  2.b3d5e382.js  2.c8b51193.js  3.1a30f712.js  3.30039734.js  3.ce517110.js  4.00328c34.js  4.9c0acbb5.js  5.97d825ca.js  5.986c3872.js  5.c855218b.js  6.6b2c5c58.js  6.b88a12b7.js  6.dfa09e89.js  7.fe66cad9.js  app.0111ced0.js  app.3dca2768.js  app.452ea883.js  app.49aef70d.js  app.6922e10e.js  app.707432d6.js  app.7a5ba4e8.js  app.83b9119d.js  app.9709fdf2.js  app.9f5a8cda.js  app.a3d2d9d3.js  app.b1ef33ba.js  app.b2565b82.js  app.b5523d2a.js  app.baafcf06.js  app.c25b4728.js  app.c2a06c38.js  app.c72f1be9.js  app.c92c1735.js  app.cde040ed.js  app.ed5305b7.js  app.efb8e010.js
docs/: README.md  index.html  params.json
html/: classAbout-members.html  classAbout__coll__graph.map  classAbout__inherit__graph.md5  classCompressWindow__inherit__graph.map  classExtractWindow.html  classHuffmanDecoding__inherit__graph.md5  classHuffmanEncoding-members.html  classHuffmanEncoding.html  classHuffmanEncoding__inherit__graph.map  classHuffmanEncoding__inherit__graph.md5  classLicense.html  classTree-members.html  classes.html  compresswindow_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  graph_legend.html  hierarchy.html  huffmandecoding_8h_source.html  huffmanencoding_8h_source.html  huffmantree_8h_source.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_3.map  inherit_graph_4.map  inherit_graph_4.md5  mainwindow_8h_source.html  pages.html  prioqueue_8h_source.html
html/search/: all_2.js  all_3.js  all_5.js  all_6.js  all_b.js  all_c.js  classes_1.js  classes_4.js  classes_5.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  pages_1.js  searchdata.js
latex/: annotated.tex  classAbout.tex  classAbout__inherit__graph.md5  classCompressWindow.tex  classCompressWindow__coll__graph.md5  classExtractWindow.tex  classExtractWindow__inherit__graph.md5  classHuffmanDecoding.tex  classHuffmanDecoding__inherit__graph.md5  classHuffmanEncoding.tex  classHuffmanEncoding__coll__graph.md5  classLicense.tex  classLicense__coll__graph.md5  classMainWindow.tex  classQueue.tex  classTree.tex  hierarchy.tex  index.tex  md_CONTRIBUTING.tex  refman.tex
outputs/: test.frog
outs/: README.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
src/: .gitignore  CMakeLists.txt  FrogArchiver.pro  FrogArchiver.qrc  FroqArchiver.rc  about.cpp  about.h  about.ui  compress-window.ui  compresswindow.cpp  compresswindow.h  compresswindow.ui  dialogembed.cpp  dialogembed.h  dialogembed.ui  extractwindow.cpp  extractwindow.h  extractwindow.ui  huffman.h  huffmandecoding.cpp  huffmandecoding.h  huffmanencoding.cpp  huffmanencoding.h  huffmantree.h  license.cpp  license.h  license.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  prioqueue.h
src/config/: config.xml
src/i18n/: CMakeLists.txt  FrogArchiver_en.ts  FrogArchiver_es.ts  FrogArchiver_fr.ts
